// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorPickerButton Closed smoke-test 1`] = `
<div>
  <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge stable-makeStyles-iconButton-1 css-154kngp-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
          data-testid="icon-button"
  >
    <div class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault stable-makeStyles-colorAvatar-2 stable-makeStyles-colorAvatar-3 css-jmdkhx-MuiAvatar-root">
      <div class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault stable-makeStyles-colorAvatar-2 stable-makeStyles-colorAvatar-4 css-jmdkhx-MuiAvatar-root">
        Beta
      </div>
    </div>
  </button>
</div>
`;

exports[`ColorPickerButton Open smoke-test 1`] = `
<div>
  <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge stable-makeStyles-iconButton-5 css-154kngp-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
          data-testid="icon-button"
  >
    <div class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault stable-makeStyles-colorAvatar-6 stable-makeStyles-colorAvatar-7 css-jmdkhx-MuiAvatar-root">
      <div class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault stable-makeStyles-colorAvatar-6 stable-makeStyles-colorAvatar-8 css-jmdkhx-MuiAvatar-root">
        Beta
      </div>
    </div>
  </button>
</div>
`;
